--- a/PInvoke/DXCore/Vanara.PInvoke.DXCore.csproj
+++ b/PInvoke/DXCore/Vanara.PInvoke.DXCore.csproj
@@ -9,7 +9,16 @@
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;DXCore</PackageTags>
-    <PackageReleaseNotes/>
+    <PackageReleaseNotes>Currently implements:
+
+Functions
+DXCoreCreateAdapterFactory
+
+Structures
+DXCoreAdapterEngineIndex DXCoreAdapterMemoryBudget DXCoreAdapterMemoryBudgetNodeSegmentGroup DXCoreAdapterProcessSetQueryInput DXCoreAdapterProcessSetQueryOutput DXCoreEngineNamePropertyInput DXCoreEngineNamePropertyOutput DXCoreEngineQueryInput DXCoreEngineQueryOutput DXCoreFrequencyQueryOutput DXCoreHardwareID DXCoreHardwareIDParts DXCoreMemoryQueryInput DXCoreMemoryUsage DXCoreProcessMemoryQueryInput DXCoreProcessMemoryQueryOutput
+
+</PackageReleaseNotes>
+    <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
