--- a/PInvoke/DXGI/Vanara.PInvoke.DXGI.csproj
+++ b/PInvoke/DXGI/Vanara.PInvoke.DXGI.csproj
@@ -9,7 +9,19 @@
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;DXGI</PackageTags>
-    <PackageReleaseNotes />
+    <PackageReleaseNotes>Currently implements:
+
+Functions
+ApplyCompatResolutionQuirking CompatString CompatValue CreateDXGIFactory CreateDXGIFactory1 CreateDXGIFactory2 DXGID3D10CreateDevice DXGID3D10CreateLayeredDevice DXGID3D10GetLayeredDeviceSize DXGID3D10RegisterLayers DXGIDeclareAdapterRemovalSupport DXGIDisableVBlankVirtualization DXGIDumpJournal DXGIGetDebugInterface DXGIGetDebugInterface1 DXGIReportAdapterConfiguration PIXBeginCapture PIXEndCapture PIXGetCaptureState SetAppCompatStringPointer UpdateHMDEmulationStatus
+
+Structures
+&lt;BluePrimary&gt;e__FixedBuffer &lt;BluePrimary&gt;e__FixedBuffer &lt;GreenPrimary&gt;e__FixedBuffer &lt;GreenPrimary&gt;e__FixedBuffer &lt;primaryCoordinates&gt;e__FixedBuffer &lt;RedPrimary&gt;e__FixedBuffer &lt;RedPrimary&gt;e__FixedBuffer &lt;WhitePoint&gt;e__FixedBuffer &lt;WhitePoint&gt;e__FixedBuffer &lt;whitePoints&gt;e__FixedBuffer D2D1_PIXEL_FORMAT D2D_MATRIX_3X2_F D2D_MATRIX_4X3_F D2D_MATRIX_4X4_F D2D_MATRIX_5X4_F D2D_POINT_2F D2D_RECT_F D2D_SIZE_F D2D_SIZE_U D2D_VECTOR_2F D2D_VECTOR_3F D2D_VECTOR_4F D3D10_BOX D3DCOLORVALUE D3D_SHADER_MACRO DXGI_ADAPTER_DESC DXGI_ADAPTER_DESC1 DXGI_ADAPTER_DESC2 DXGI_ADAPTER_DESC3 DXGI_DECODE_SWAP_CHAIN_DESC DXGI_DISPLAY_COLOR_SPACE DXGI_FRAME_STATISTICS DXGI_FRAME_STATISTICS_MEDIA DXGI_GAMMA_CONTROL DXGI_GAMMA_CONTROL_CAPABILITIES DXGI_HDR_METADATA_HDR10 DXGI_INFO_QUEUE_FILTER DXGI_INFO_QUEUE_FILTER_DESC DXGI_INFO_QUEUE_MESSAGE DXGI_JPEG_AC_HUFFMAN_TABLE DXGI_JPEG_DC_HUFFMAN_TABLE DXGI_JPEG_QUANTIZATION_TABLE DXGI_MAPPED_RECT DXGI_MATRIX_3X2_F DXGI_MODE_DESC DXGI_MODE_DESC1 DXGI_OUTDUPL_DESC DXGI_OUTDUPL_FRAME_INFO DXGI_OUTDUPL_MOVE_RECT DXGI_OUTDUPL_POINTER_POSITION DXGI_OUTDUPL_POINTER_SHAPE_INFO DXGI_OUTPUT_DESC DXGI_OUTPUT_DESC1 DXGI_PRESENT_PARAMETERS DXGI_QUERY_VIDEO_MEMORY_INFO DXGI_RATIONAL DXGI_RGB DXGI_RGBA DXGI_SAMPLE_DESC DXGI_SHARED_RESOURCE DXGI_SURFACE_DESC DXGI_SWAP_CHAIN_DESC DXGI_SWAP_CHAIN_DESC1 DXGI_SWAP_CHAIN_FULLSCREEN_DESC LUID
+
+Interfaces
+ID3D10Blob ID3DDestructionNotifier IDXGIAdapter IDXGIAdapter1 IDXGIDevice IDXGIDeviceSubObject IDXGIFactory IDXGIFactory1 IDXGIObject IDXGIOutput IDXGISurface IDXGISwapChain
+
+</PackageReleaseNotes>
+    <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
