--- a/PInvoke/FunDisc/Vanara.PInvoke.FunDisc.csproj
+++ b/PInvoke/FunDisc/Vanara.PInvoke.FunDisc.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <ProjectExtensions>
-    <SupportedDlls>FunDisc.dll</SupportedDlls>
+    <SupportedDlls>fundisc.dll</SupportedDlls>
   </ProjectExtensions>
   <PropertyGroup>
     <Description>PInvoke API (methods, structures and constants) imported from Windows Functional Discovery (FunDisc.dll).</Description>
