--- a/PInvoke/D3DCompiler/Vanara.PInvoke.D3DCompiler.csproj
+++ b/PInvoke/D3DCompiler/Vanara.PInvoke.D3DCompiler.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <ProjectExtensions>
-    <SupportedDlls>D3DCompiler.dll</SupportedDlls>
+    <SupportedDlls>d3dcompiler_47.dll</SupportedDlls>
   </ProjectExtensions>
   <PropertyGroup>
     <Description>PInvoke API (methods, structures and constants) imported from Windows D3DCompiler.dll.</Description>
@@ -12,7 +12,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-D3DCompile D3DCompile2 D3DCompileFromFile D3DCompressShaders D3DCreateBlob D3DCreateFunctionLinkingGraph D3DCreateLinker D3DDecompressShaders D3DDisassemble D3DDisassemble10Effect D3DDisassembleRegion D3DGetBlobPart D3DGetDebugInfo D3DGetInputAndOutputSignatureBlob D3DGetInputSignatureBlob D3DGetOutputSignatureBlob D3DGetTraceInstructionOffsets D3DLoadModule D3DPreprocess D3DReadFileToBlob D3DReflect D3DReflectLibrary D3DSetBlobPart D3DStripShader D3DWriteBlobToFile
+D3DAssemble D3DCompile D3DCompile2 D3DCompileFromFile D3DCompressShaders D3DCreateBlob D3DCreateFunctionLinkingGraph D3DCreateLinker D3DDecompressShaders D3DDisassemble D3DDisassemble10Effect D3DDisassemble11Trace D3DDisassembleRegion D3DGetBlobPart D3DGetDebugInfo D3DGetInputAndOutputSignatureBlob D3DGetInputSignatureBlob D3DGetOutputSignatureBlob D3DGetTraceInstructionOffsets D3DLoadModule D3DPreprocess D3DReadFileToBlob D3DReflect D3DReflectLibrary D3DReturnFailure1 D3DSetBlobPart D3DStripShader D3DWriteBlobToFile DebugSetMute
 
 Structures
 D3D11_FUNCTION_DESC D3D11_LIBRARY_DESC D3D11_PARAMETER_DESC D3D11_SHADER_BUFFER_DESC D3D11_SHADER_DESC D3D11_SHADER_INPUT_BIND_DESC D3D11_SHADER_TYPE_DESC D3D11_SHADER_VARIABLE_DESC D3D11_SIGNATURE_PARAMETER_DESC D3D_SHADER_DATA
