--- a/PInvoke/DStorage/Vanara.PInvoke.DStorage.csproj
+++ b/PInvoke/DStorage/Vanara.PInvoke.DStorage.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <ProjectExtensions>
-    <SupportedDlls>DStorage.dll</SupportedDlls>
+    <SupportedDlls>dstorage.dll</SupportedDlls>
   </ProjectExtensions>
   <PropertyGroup>
     <Description>PInvoke API (methods, structures and constants) imported from Windows DStorage.dll.</Description>
@@ -15,7 +15,7 @@ Functions
 DStorageCreateCompressionCodec DStorageGetFactory DStorageSetConfiguration DStorageSetConfiguration1
 
 Structures
-&lt;Reserved1&gt;e__FixedBuffer &lt;Reserved&gt;e__FixedBuffer &lt;Reserved&gt;e__FixedBuffer &lt;_RequestName&gt;e__FixedBuffer DSTORAGE_CONFIGURATION DSTORAGE_CONFIGURATION1 DSTORAGE_CUSTOM_DECOMPRESSION_REQUEST DSTORAGE_CUSTOM_DECOMPRESSION_RESULT DSTORAGE_DESTINATION_BUFFER DSTORAGE_DESTINATION_MEMORY DSTORAGE_DESTINATION_MULTIPLE_SUBRESOURCES DSTORAGE_DESTINATION_TEXTURE_REGION DSTORAGE_DESTINATION_TILES DSTORAGE_ERROR_PARAMETERS_EVENT DSTORAGE_ERROR_PARAMETERS_SIGNAL DSTORAGE_ERROR_PARAMETERS_STATUS DSTORAGE_QUEUE_DESC DSTORAGE_QUEUE_INFO DSTORAGE_REQUEST_OPTIONS DSTORAGE_SOURCE_FILE DSTORAGE_SOURCE_MEMORY
+&lt;Reserved1&gt;e__FixedBuffer &lt;Reserved&gt;e__FixedBuffer &lt;Reserved&gt;e__FixedBuffer &lt;_Filename&gt;e__FixedBuffer &lt;_RequestName&gt;e__FixedBuffer DSTORAGE_CONFIGURATION DSTORAGE_CONFIGURATION1 DSTORAGE_CUSTOM_DECOMPRESSION_REQUEST DSTORAGE_CUSTOM_DECOMPRESSION_RESULT DSTORAGE_DESTINATION DSTORAGE_DESTINATION_BUFFER DSTORAGE_DESTINATION_MEMORY DSTORAGE_DESTINATION_MULTIPLE_SUBRESOURCES DSTORAGE_DESTINATION_TEXTURE_REGION DSTORAGE_DESTINATION_TILES DSTORAGE_ERROR_FIRST_FAILURE DSTORAGE_ERROR_PARAMETERS_EVENT DSTORAGE_ERROR_PARAMETERS_REQUEST DSTORAGE_ERROR_PARAMETERS_SIGNAL DSTORAGE_ERROR_PARAMETERS_STATUS DSTORAGE_ERROR_RECORD DSTORAGE_QUEUE_DESC DSTORAGE_QUEUE_INFO DSTORAGE_REQUEST DSTORAGE_REQUEST_OPTIONS DSTORAGE_SOURCE DSTORAGE_SOURCE_FILE DSTORAGE_SOURCE_MEMORY UNION
 
 Interfaces
 IDStorageCompressionCodec IDStorageCustomDecompressionQueue IDStorageCustomDecompressionQueue1 IDStorageFactory IDStorageFile IDStorageQueue IDStorageQueue1 IDStorageQueue2 IDStorageStatusArray
