--- a/PInvoke/Direct2D/Vanara.PInvoke.Direct2D.csproj
+++ b/PInvoke/Direct2D/Vanara.PInvoke.Direct2D.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <ProjectExtensions>
-    <SupportedDlls>Direct2D.dll</SupportedDlls>
+    <SupportedDlls>d2d1.dll</SupportedDlls>
   </ProjectExtensions>
   <PropertyGroup>
     <Description>PInvoke API (methods, structures and constants) imported from Windows Direct2D.dll.</Description>
