--- a/PInvoke/D3DCompiler/Vanara.PInvoke.D3DCompiler.csproj
+++ b/PInvoke/D3DCompiler/Vanara.PInvoke.D3DCompiler.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <ProjectExtensions>
-    <SupportedDlls>d3dcompiler_47.dll</SupportedDlls>
+    <SupportedDlls>d3dcompiler_47.dll;dxilconv.dll</SupportedDlls>
   </ProjectExtensions>
   <PropertyGroup>
     <Description>PInvoke API (methods, structures and constants) imported from Windows D3DCompiler.dll.</Description>
@@ -26,6 +26,7 @@ ID3D11FunctionLinkingGraph ID3D11FunctionParameterReflection ID3D11FunctionRefle
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\DXGI\Vanara.PInvoke.DXGI.csproj" />
+    <ProjectReference Include="..\Ole\Vanara.PInvoke.Ole.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
 </Project>
