More DirectX updates

--- a/PInvoke/DXCore/Vanara.PInvoke.DXCore.csproj
+++ b/PInvoke/DXCore/Vanara.PInvoke.DXCore.csproj
@@ -17,6 +17,9 @@ DXCoreCreateAdapterFactory
 Structures
 DXCoreAdapterEngineIndex DXCoreAdapterMemoryBudget DXCoreAdapterMemoryBudgetNodeSegmentGroup DXCoreAdapterProcessSetQueryInput DXCoreAdapterProcessSetQueryOutput DXCoreEngineNamePropertyInput DXCoreEngineNamePropertyOutput DXCoreEngineQueryInput DXCoreEngineQueryOutput DXCoreFrequencyQueryOutput DXCoreHardwareID DXCoreHardwareIDParts DXCoreMemoryQueryInput DXCoreMemoryUsage DXCoreProcessMemoryQueryInput DXCoreProcessMemoryQueryOutput
 
+Interfaces
+IDXCoreAdapter IDXCoreAdapter1 IDXCoreAdapterFactory IDXCoreAdapterFactory1 IDXCoreAdapterList
+
 </PackageReleaseNotes>
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
