Finished work on DirectXMath and other impacted projects

--- a/PInvoke/DirectX/Vanara.PInvoke.DirectX.csproj
+++ b/PInvoke/DirectX/Vanara.PInvoke.DirectX.csproj
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\Direct2D\Vanara.PInvoke.Direct2D.csproj" />
     <ProjectReference Include="..\Direct3D11\Vanara.PInvoke.Direct3D11.csproj" />
     <ProjectReference Include="..\Direct3D12\Vanara.PInvoke.Direct3D12.csproj" />
+    <ProjectReference Include="..\DirectXMath\Vanara.PInvoke.DirectXMath.csproj" />
     <ProjectReference Include="..\DXCore\Vanara.PInvoke.DXCore.csproj" />
     <ProjectReference Include="..\DXGI\Vanara.PInvoke.DXGI.csproj" />
     <ProjectReference Include="..\DStorage\Vanara.PInvoke.DStorage.csproj" />
