--- a/PInvoke/DXGI/Vanara.PInvoke.DXGI.csproj
+++ b/PInvoke/DXGI/Vanara.PInvoke.DXGI.csproj
@@ -1,33 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-  <ProjectExtensions>
-    <SupportedDlls>dxgi.dll</SupportedDlls>
-  </ProjectExtensions>
-  <PropertyGroup>
-    <Description>PInvoke API (methods, structures and constants) imported from Windows DXGI.dll.</Description>
-    <AssemblyName>Vanara.PInvoke.DXGI</AssemblyName>
-    <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <PackageId>$(AssemblyName)</PackageId>
-    <PackageTags>pinvoke;vanara;net-extensions;interop;DXGI</PackageTags>
-    <PackageReleaseNotes>Currently implements:
+	<ProjectExtensions>
+		<SupportedDlls>dxgi.dll</SupportedDlls>
+	</ProjectExtensions>
+	<PropertyGroup>
+		<Description>PInvoke API (methods, structures and constants) imported from Windows DXGI.dll.</Description>
+		<AssemblyName>Vanara.PInvoke.DXGI</AssemblyName>
+		<AssemblyTitle>$(AssemblyName)</AssemblyTitle>
+		<PackageId>$(AssemblyName)</PackageId>
+		<PackageTags>pinvoke;vanara;net-extensions;interop;DXGI</PackageTags>
+		<PackageReleaseNotes>
+			Currently implements:
 
-Functions
-CreateDXGIFactory CreateDXGIFactory1 CreateDXGIFactory2 DXGIDeclareAdapterRemovalSupport DXGIDisableVBlankVirtualization DXGIGetDebugInterface DXGIGetDebugInterface1
+			Functions
+			CreateDXGIFactory CreateDXGIFactory1 CreateDXGIFactory2 DXGIDeclareAdapterRemovalSupport DXGIDisableVBlankVirtualization DXGIGetDebugInterface DXGIGetDebugInterface1
 
-Structures
-&lt;BluePrimary&gt;e__FixedBuffer &lt;BluePrimary&gt;e__FixedBuffer &lt;GreenPrimary&gt;e__FixedBuffer &lt;GreenPrimary&gt;e__FixedBuffer &lt;primaryCoordinates&gt;e__FixedBuffer &lt;RedPrimary&gt;e__FixedBuffer &lt;RedPrimary&gt;e__FixedBuffer &lt;WhitePoint&gt;e__FixedBuffer &lt;WhitePoint&gt;e__FixedBuffer &lt;whitePoints&gt;e__FixedBuffer D2D1_PIXEL_FORMAT D2D_MATRIX_3X2_F D2D_MATRIX_4X3_F D2D_MATRIX_4X4_F D2D_MATRIX_5X4_F D2D_POINT_2F D2D_POINT_2U D2D_RECT_F D2D_RECT_U D2D_SIZE_F D2D_SIZE_U D2D_VECTOR_2F D2D_VECTOR_3F D2D_VECTOR_4F D3D10_BOX D3DCOLORVALUE D3D_SHADER_MACRO DXGI_ADAPTER_DESC DXGI_ADAPTER_DESC1 DXGI_ADAPTER_DESC2 DXGI_ADAPTER_DESC3 DXGI_DEBUG_ID DXGI_DECODE_SWAP_CHAIN_DESC DXGI_DISPLAY_COLOR_SPACE DXGI_FRAME_STATISTICS DXGI_FRAME_STATISTICS_MEDIA DXGI_GAMMA_CONTROL DXGI_GAMMA_CONTROL_CAPABILITIES DXGI_HDR_METADATA_HDR10 DXGI_INFO_QUEUE_FILTER DXGI_INFO_QUEUE_FILTER_DESC DXGI_INFO_QUEUE_MESSAGE DXGI_JPEG_AC_HUFFMAN_TABLE DXGI_JPEG_DC_HUFFMAN_TABLE DXGI_JPEG_QUANTIZATION_TABLE DXGI_MAPPED_RECT DXGI_MATRIX_3X2_F DXGI_MODE_DESC DXGI_MODE_DESC1 DXGI_OUTDUPL_DESC DXGI_OUTDUPL_FRAME_INFO DXGI_OUTDUPL_MOVE_RECT DXGI_OUTDUPL_POINTER_POSITION DXGI_OUTDUPL_POINTER_SHAPE_INFO DXGI_OUTPUT_DESC DXGI_OUTPUT_DESC1 DXGI_PRESENT_PARAMETERS DXGI_QUERY_VIDEO_MEMORY_INFO DXGI_RATIONAL DXGI_RGB DXGI_RGBA DXGI_SAMPLE_DESC DXGI_SHARED_RESOURCE DXGI_SURFACE_DESC DXGI_SWAP_CHAIN_DESC DXGI_SWAP_CHAIN_DESC1 DXGI_SWAP_CHAIN_FULLSCREEN_DESC PD2D_POINT_2F PD2D_RECT_F
+			Structures
+			&lt;BluePrimary&gt;e__FixedBuffer &lt;BluePrimary&gt;e__FixedBuffer &lt;GreenPrimary&gt;e__FixedBuffer &lt;GreenPrimary&gt;e__FixedBuffer &lt;primaryCoordinates&gt;e__FixedBuffer &lt;RedPrimary&gt;e__FixedBuffer &lt;RedPrimary&gt;e__FixedBuffer &lt;WhitePoint&gt;e__FixedBuffer &lt;WhitePoint&gt;e__FixedBuffer &lt;whitePoints&gt;e__FixedBuffer D2D1_PIXEL_FORMAT D2D_MATRIX_3X2_F D2D_MATRIX_4X3_F D2D_MATRIX_4X4_F D2D_MATRIX_5X4_F D2D_POINT_2F D2D_POINT_2U D2D_RECT_F D2D_RECT_U D2D_SIZE_F D2D_SIZE_U D2D_VECTOR_2F D2D_VECTOR_3F D2D_VECTOR_4F D3D10_BOX D3DCOLORVALUE D3D_SHADER_MACRO DXGI_ADAPTER_DESC DXGI_ADAPTER_DESC1 DXGI_ADAPTER_DESC2 DXGI_ADAPTER_DESC3 DXGI_DEBUG_ID DXGI_DECODE_SWAP_CHAIN_DESC DXGI_DISPLAY_COLOR_SPACE DXGI_FRAME_STATISTICS DXGI_FRAME_STATISTICS_MEDIA DXGI_GAMMA_CONTROL DXGI_GAMMA_CONTROL_CAPABILITIES DXGI_HDR_METADATA_HDR10 DXGI_INFO_QUEUE_FILTER DXGI_INFO_QUEUE_FILTER_DESC DXGI_INFO_QUEUE_MESSAGE DXGI_JPEG_AC_HUFFMAN_TABLE DXGI_JPEG_DC_HUFFMAN_TABLE DXGI_JPEG_QUANTIZATION_TABLE DXGI_MAPPED_RECT DXGI_MATRIX_3X2_F DXGI_MODE_DESC DXGI_MODE_DESC1 DXGI_OUTDUPL_DESC DXGI_OUTDUPL_FRAME_INFO DXGI_OUTDUPL_MOVE_RECT DXGI_OUTDUPL_POINTER_POSITION DXGI_OUTDUPL_POINTER_SHAPE_INFO DXGI_OUTPUT_DESC DXGI_OUTPUT_DESC1 DXGI_PRESENT_PARAMETERS DXGI_QUERY_VIDEO_MEMORY_INFO DXGI_RATIONAL DXGI_RGB DXGI_RGBA DXGI_SAMPLE_DESC DXGI_SHARED_RESOURCE DXGI_SURFACE_DESC DXGI_SWAP_CHAIN_DESC DXGI_SWAP_CHAIN_DESC1 DXGI_SWAP_CHAIN_FULLSCREEN_DESC PD2D_POINT_2F PD2D_RECT_F
 
-Interfaces
-ID3D10Blob ID3DDestructionNotifier IDXGIAdapter IDXGIAdapter1 IDXGIAdapter2 IDXGIAdapter3 IDXGIAdapter4 IDXGIDebug IDXGIDebug1 IDXGIDecodeSwapChain IDXGIDevice IDXGIDevice1 IDXGIDevice2 IDXGIDevice3 IDXGIDevice4 IDXGIDeviceSubObject IDXGIDisplayControl IDXGIFactory IDXGIFactory1 IDXGIFactory2 IDXGIFactory3 IDXGIFactory4 IDXGIFactory5 IDXGIFactory6 IDXGIFactory7 IDXGIFactoryMedia IDXGIInfoQueue IDXGIObject IDXGIOutput IDXGIOutput1 IDXGIOutput2 IDXGIOutput3 IDXGIOutput4 IDXGIOutput5 IDXGIOutput6 IDXGIOutputDuplication IDXGIResource IDXGIResource1 IDXGISurface IDXGISurface1 IDXGISurface2 IDXGISwapChain IDXGISwapChain1 IDXGISwapChain2 IDXGISwapChain3 IDXGISwapChain4 IDXGISwapChainMedia
+			Interfaces
+			ID3D10Blob ID3DDestructionNotifier IDXGIAdapter IDXGIAdapter1 IDXGIAdapter2 IDXGIAdapter3 IDXGIAdapter4 IDXGIDebug IDXGIDebug1 IDXGIDecodeSwapChain IDXGIDevice IDXGIDevice1 IDXGIDevice2 IDXGIDevice3 IDXGIDevice4 IDXGIDeviceSubObject IDXGIDisplayControl IDXGIFactory IDXGIFactory1 IDXGIFactory2 IDXGIFactory3 IDXGIFactory4 IDXGIFactory5 IDXGIFactory6 IDXGIFactory7 IDXGIFactoryMedia IDXGIInfoQueue IDXGIObject IDXGIOutput IDXGIOutput1 IDXGIOutput2 IDXGIOutput3 IDXGIOutput4 IDXGIOutput5 IDXGIOutput6 IDXGIOutputDuplication IDXGIResource IDXGIResource1 IDXGISurface IDXGISurface1 IDXGISurface2 IDXGISwapChain IDXGISwapChain1 IDXGISwapChain2 IDXGISwapChain3 IDXGISwapChain4 IDXGISwapChainMedia
 
-</PackageReleaseNotes>
-    <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
-  </PropertyGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
-    <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' != 'net45'">
-    <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.3.2" />
-  </ItemGroup>
+		</PackageReleaseNotes>
+		<PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
+	</PropertyGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
+		<ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' != 'net45'">
+		<PackageReference Include="CommunityToolkit.HighPerformance" Version="8.3.2" />
+	</ItemGroup>
 </Project>
