Migrated all PInvoke.Cryptography handles to autogen

--- a/PInvoke/Cryptography/Vanara.PInvoke.Cryptography.csproj
+++ b/PInvoke/Cryptography/Vanara.PInvoke.Cryptography.csproj
@@ -21,6 +21,12 @@ BCRYPT_ALGORITHM_IDENTIFIER BCRYPT_ALG_HANDLE BCRYPT_DH_PARAMETER_HEADER BCRYPT_
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
+    <AdditionalFiles Include="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
 </Project>
