--- a/UnitTests/PInvoke/VssApi/VssApi.csproj
+++ b/UnitTests/PInvoke/VssApi/VssApi.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <AssemblyName>UnitTest.PInvoke.VssApi</AssemblyName>
     <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <!--<Reference Include="Microsoft.VisualBasic">
