More build fixes for net9 and vss net8

--- a/CodeGen/Vanara.CodeGen.csproj
+++ b/CodeGen/Vanara.CodeGen.csproj
@@ -12,6 +12,7 @@
     <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
     <IsRoslynComponent>true</IsRoslynComponent>
     <IncludeBuildOutput>false</IncludeBuildOutput>
+	<NoPackageAnalysis>true</NoPackageAnalysis>
   </PropertyGroup>
 
   <ItemGroup>
