--- a/PInvoke/VssApi/Vanara.PInvoke.VssApi.vcxproj
+++ b/PInvoke/VssApi/Vanara.PInvoke.VssApi.vcxproj
@@ -41,7 +41,7 @@
     </UpdateFiles>
   </ProjectExtensions>
   <PropertyGroup>
-    <TargetFramework>net8.0-windows7.0</TargetFramework>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <TargetFrameworks>$(TargetFramework)</TargetFrameworks>
     <CoreBuild Condition="!$(TargetFramework.StartsWith('net4'))">true</CoreBuild>
     <IncludeSymbols>true</IncludeSymbols>
