Added autogen handles to ActiveDS, AMSI, Avrt, Cabinet, CfgMgr32, CimFs, CldApi, ClfsW32, DavClnt, DbgHelp, DnsApi, Drt, FhSvcCtl, FwpUClnt, and HttpApi

--- a/PInvoke/Cabinet/Vanara.PInvoke.Cabinet.csproj
+++ b/PInvoke/Cabinet/Vanara.PInvoke.Cabinet.csproj
@@ -24,6 +24,9 @@ CCAB COMPRESSOR_HANDLE COMPRESS_ALLOCATION_ROUTINES DECOMPRESSOR_HANDLE DECRYPT 
     <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <AdditionalFiles Include="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
 </Project>
