--- a/PInvoke/AMSI/Vanara.PInvoke.AMSI.csproj
+++ b/PInvoke/AMSI/Vanara.PInvoke.AMSI.csproj
@@ -24,6 +24,9 @@ IAmsiStream IAntimalware IAntimalware2 IAntimalwareProvider IAntimalwareProvider
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
+    <AdditionalFiles Include="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
 </Project>
