--- a/PInvoke/CfgMgr32/Vanara.PInvoke.CfgMgr32.csproj
+++ b/PInvoke/CfgMgr32/Vanara.PInvoke.CfgMgr32.csproj
@@ -21,6 +21,9 @@ Structures
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
+    <AdditionalFiles Include="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Security\Vanara.PInvoke.Security.csproj" />
     <ProjectReference Include="..\SetupAPI\Vanara.PInvoke.SetupAPI.csproj" />
   </ItemGroup>
