--- a/PInvoke/CimFs/Vanara.PInvoke.CimFs.csproj
+++ b/PInvoke/CimFs/Vanara.PInvoke.CimFs.csproj
@@ -21,6 +21,9 @@ CIMFS_FILE_METADATA CIMFS_IMAGE_HANDLE CIMFS_STREAM_HANDLE
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
+    <AdditionalFiles Include="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
 </Project>
