--- a/PInvoke/ClfsW32/Vanara.PInvoke.ClfsW32.csproj
+++ b/PInvoke/ClfsW32/Vanara.PInvoke.ClfsW32.csproj
@@ -21,6 +21,9 @@ AUTOGROW AUTOSHRINK CLFS_MGMT_NOTIFICATION CLFS_MGMT_POLICY CLFS_NODE_ID CLS_ARC
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
+    <AdditionalFiles Include="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
   </ItemGroup>
 </Project>
