Added autogen handles to FwpUClnt, IpHlpApi, KtmW32, Lz32, Mpr, Msi, Multimedia, NdfApi, NetApi32, NtDll, NTDSApi, Odbc32

--- a/PInvoke/KtmW32/Vanara.PInvoke.KtmW32.csproj
+++ b/PInvoke/KtmW32/Vanara.PInvoke.KtmW32.csproj
@@ -21,6 +21,12 @@ HENLISTMENT HRESMGR HTRXNMGR TRANSACTION_NOTIFICATION TRANSACTION_NOTIFICATION_R
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
+    <AdditionalFiles Include="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
   </ItemGroup>
 </Project>
