Added autogen handles to P2P, Pdh, PeerDist, PowrProf,Printing,ProjectedFSLib,QoS,SetupAPI,Shell32

--- a/PInvoke/P2P/Vanara.PInvoke.P2P.csproj
+++ b/PInvoke/P2P/Vanara.PInvoke.P2P.csproj
@@ -21,6 +21,9 @@ HGRAPH HGROUP HPEERENUM HPEEREVENT HREGISTRATION HRESOLUTION PEER_ADDRESS PEER_A
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
+    <AdditionalFiles Include="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Security\Vanara.PInvoke.Security.csproj" />
     <ProjectReference Include="..\Ws2_32\Vanara.PInvoke.Ws2_32.csproj" />
   </ItemGroup>
