--- a/PInvoke/Shell32/Vanara.PInvoke.Shell32.csproj
+++ b/PInvoke/Shell32/Vanara.PInvoke.Shell32.csproj
@@ -27,6 +27,9 @@ DFConstraint DShellFolderViewEvents Folder Folder2 Folder3 FolderItem FolderItem
     <NoWarn>$(NoWarn);SYSLIB0011;0618;1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <AdditionalFiles Include="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\ComCtl32\Vanara.PInvoke.ComCtl32.csproj" />
     <ProjectReference Include="..\Ole\Vanara.PInvoke.Ole.csproj" />
     <ProjectReference Include="..\ShlwApi\Vanara.PInvoke.ShlwApi.csproj" />
