--- a/PInvoke/VirtDisk/Vanara.PInvoke.VirtDisk.csproj
+++ b/PInvoke/VirtDisk/Vanara.PInvoke.VirtDisk.csproj
@@ -21,6 +21,9 @@ APPLY_SNAPSHOT_VHDSET_PARAMETERS APPLY_SNAPSHOT_VHDSET_PARAMETERS_Version1 ATTAC
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
+    <AdditionalFiles Include="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
   </ItemGroup>
 </Project>
