--- a/PInvoke/WlanApi/Vanara.PInvoke.WlanApi.csproj
+++ b/PInvoke/WlanApi/Vanara.PInvoke.WlanApi.csproj
@@ -24,6 +24,9 @@ IDot11AdHocInterface IDot11AdHocInterfaceNotificationSink IDot11AdHocManager IDo
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
+    <AdditionalFiles Include="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
 </Project>
