--- a/PInvoke/ShlwApi/Vanara.PInvoke.ShlwApi.csproj
+++ b/PInvoke/ShlwApi/Vanara.PInvoke.ShlwApi.csproj
@@ -24,6 +24,9 @@ IQueryAssociations
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
+    <AdditionalFiles Include="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
   </ItemGroup>
 </Project>
