--- a/PInvoke/WTSApi32/Vanara.PInvoke.WTSApi32.csproj
+++ b/PInvoke/WTSApi32/Vanara.PInvoke.WTSApi32.csproj
@@ -21,6 +21,9 @@ HVIRTUALCHANNEL HWTSSERVER WTSCLIENT WTSCONFIGINFO WTSINFO WTSINFOEX WTSINFOEX_L
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
+    <AdditionalFiles Include="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
 </Project>
