--- a/PInvoke/WebSocket/Vanara.PInvoke.WebSocket.csproj
+++ b/PInvoke/WebSocket/Vanara.PInvoke.WebSocket.csproj
@@ -21,6 +21,9 @@ CLOSESTATUS DATA WEB_SOCKET_BUFFER WEB_SOCKET_HANDLE WEB_SOCKET_HTTP_HEADER WEB_
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
+    <AdditionalFiles Include="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
 </Project>
