--- a/PInvoke/Wer/Vanara.PInvoke.Wer.csproj
+++ b/PInvoke/Wer/Vanara.PInvoke.Wer.csproj
@@ -21,6 +21,9 @@ HREPORT HREPORTSTORE WER_DUMP_CUSTOM_OPTIONS WER_EXCEPTION_INFORMATION WER_REPOR
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
+    <AdditionalFiles Include="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
   </ItemGroup>
 </Project>
