--- a/PInvoke/WinINet/Vanara.PInvoke.WinINet.csproj
+++ b/PInvoke/WinINet/Vanara.PInvoke.WinINet.csproj
@@ -21,6 +21,9 @@ ATTRIBUTETYPE GOPHER_ABSTRACT_ATTRIBUTE_TYPE GOPHER_ADMIN_ATTRIBUTE_TYPE GOPHER_
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
+    <AdditionalFiles Include="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
 </Project>
