--- a/PInvoke/WinTrust/Vanara.PInvoke.WinTrust.csproj
+++ b/PInvoke/WinTrust/Vanara.PInvoke.WinTrust.csproj
@@ -21,6 +21,9 @@ CATALOG_INFO CONFIG_CI_PROV_INFO CONFIG_CI_PROV_INFO_RESULT CRYPTCATATTRIBUTE CR
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
+    <AdditionalFiles Include="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Cryptography\Vanara.PInvoke.Cryptography.csproj" />
   </ItemGroup>
 </Project>
