--- a/PInvoke/Ws2_32/Vanara.PInvoke.Ws2_32.csproj
+++ b/PInvoke/Ws2_32/Vanara.PInvoke.Ws2_32.csproj
@@ -21,6 +21,9 @@ ADDRINFOEX2W ADDRINFOEXW ADDRINFOW AFPROTOCOLS APC ASSOCIATE_NAMERES_CONTEXT_INP
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
+    <AdditionalFiles Include="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
   </ItemGroup>
 </Project>
