--- a/PInvoke/WsmSvc/Vanara.PInvoke.WsmSvc.csproj
+++ b/PInvoke/WsmSvc/Vanara.PInvoke.WsmSvc.csproj
@@ -24,6 +24,9 @@ IWSMan IWSManConnectionOptions IWSManConnectionOptionsEx IWSManConnectionOptions
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
+    <AdditionalFiles Include="handles.csv" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
 </Project>
