Removed X86 and X64 Platform specs

--- a/UnitTests/Directory.Build.props
+++ b/UnitTests/Directory.Build.props
@@ -3,7 +3,7 @@
     <TargetFrameworks/>
     <TargetFramework>net8.0</TargetFramework>
     <Configurations>Debug;Release;DebugNoTests</Configurations>
-    <Platforms>AnyCPU;x64;x86</Platforms>
+    <Platforms>AnyCPU</Platforms>
     <LangVersion>latest</LangVersion>
     <Product>Vanara</Product>
     <Nullable>enable</Nullable>
