--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,7 +4,7 @@
     <!-- Defined variable for projects that do not support .NET Standard -->
     <TargetFrameworksNotStd>net48;net6.0;net7.0;net8.0-windows;net9.0-windows;netcoreapp3.1</TargetFrameworksNotStd>
     <Configurations>Debug;Release</Configurations>
-    <Platforms>AnyCPU;x64;x86</Platforms>
+    <Platforms>AnyCPU</Platforms>
     <Version>4.1.2</Version>
     <PackageVersion>4.1.2</PackageVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
